--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "ethers": "^6.13.5"
+    "@pancakeswap/sdk": "^5.8.11",
+    "@pancakeswap/v3-core": "^1.0.2",
+    "@pancakeswap/v3-sdk": "^3.9.0",
+    "@uniswap/v3-sdk": "^3.25.2",
+    "ethers": "^6.13.5",
+    "inquirer": "^12.5.0",
+    "lowdb": "^7.0.1"
   }
 }
