install ora package

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@uniswap/v3-sdk": "^3.25.2",
     "ethers": "^6.13.5",
     "inquirer": "^12.5.0",
-    "lowdb": "^7.0.1"
+    "lowdb": "^7.0.1",
+    "ora": "^8.2.0"
   }
 }
